--- a/src/app/account/welcome/welcome.component.html
+++ b/src/app/account/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div class="logo mt-4">
-  <img src="./assets/images/logo.png" alt="Logo">
+  <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
 </div>
 <div class="container">
   <div class="row justify-content-center mt-3">
