--- a/src/app/account/review-order/review-order.component.html
+++ b/src/app/account/review-order/review-order.component.html
@@ -4,18 +4,36 @@
 <div class="container">
     <h3 class="text-center">Verifica i tuoi dati</h3>
     <hr>
-    <div class="shipping-details">
-      <h4>Dettagli Spedizione</h4>
+    <div class="shipping-details mx-3">
+      <div class="d-flex justify-content-between">
+        <h4>Dettagli Spedizione</h4>
+        <a [routerLink]="['/account/shipping-form']">modifica</a>
+      </div>
       <p>{{shippingData.name}} {{shippingData.surName}}<br>
       {{shippingData.address}}<br>
       {{shippingData.cap}} - {{shippingData.city}}</p>
       <p>{{shippingData.email}}<br>
       {{shippingData.phone}}</p>
     </div>
-    <div class="payment-details">
+    <div class="payment-details mx-3">
       <h4>Dettagli Pagamento</h4>
       <p>Metodo di pagamento: {{paymentData.paymentMethod === 'creditDebitCard'? 'Carta di credito o debito': (paymentData.paymentMethod === 'paypal'? 'PayPal' : 'Google Pay')}}<br>
       <span *ngIf="paymentData.paymentMethod === 'creditDebitCard'">Numero di carta: {{ maskedCreditCardNumber }}</span></p>
     </div>
-    <a [routerLink]="['/account/shipping-form']">modifica</a>
+    <div class="order-details w-100 mx-3 pe-5">
+      <h4 class="mb-4">Articoli nel Carrello</h4>
+      <ul *ngFor="let item of cartItems">
+        <li class="itemCart mb-3 d-flex justify-content-between">
+          <img [src]="item.immagine" alt="{{item.nome}}" />
+          {{ item.nome }} - {{ item.prezzo }} € <br>
+        </li>
+      </ul>
+    <hr>
+    <div class="totalOrder text-end">
+      <h4>Totale Ordine</h4>
+      <p>{{ total }} €</p>
+    </div>
+
+    </div>
+    <button class="btn btn-dark mt-3 ms-3" (click)="placeOrder()">Conferma ordine</button>
 </div>
