--- a/src/app/account/default/default.component.html
+++ b/src/app/account/default/default.component.html
@@ -1,7 +1,10 @@
-<div id="logo" class="m-4">
-  <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
+<div class="headerAccount m-5 mb-0 d-flex justify-content-between">
+  <div class="logo">
+    <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
+  </div>
+    <a href="#" class="mt-3 me-2" (click)="logout()">Esci</a>
 </div>
-<div class="container mt-3">
+<div class="container mt-2">
   <h3 class="text-center mb-5">Pagamento</h3>
   <ul class="nav nav-tabs">
       <li class="nav-item actived">
