--- a/src/app/account/review-order/review-order.component.html
+++ b/src/app/account/review-order/review-order.component.html
@@ -1,6 +1,9 @@
-<div id="logo" class="m-4">
+<div class="headerAccount m-5 mb-0 d-flex justify-content-between">
+  <div class="logo">
     <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
   </div>
+    <a href="#" class="mt-3 me-2" (click)="logout()">Esci</a>
+</div>
 <div class="container">
     <h3 class="text-center">Verifica i tuoi dati</h3>
     <hr>
@@ -35,5 +38,19 @@
     </div>
 
     </div>
-    <button class="btn btn-dark mt-3 ms-3" (click)="placeOrder()">Conferma ordine</button>
+    <button class="btn btn-dark mt-3 ms-3 mb-5" (click)="placeOrder()">Conferma ordine</button>
 </div>
+<footer class="d-flex justify-content-between px-5 w-100">
+  <div class="firstRow">
+      <a href="/construction">Condizioni d'uso</a><br>
+      <a href="/construction">Condizioni di vendita</a>
+  </div>
+  <div class="secondRow">
+      <a href="/construction">Info Legali e Societarie</a><br>
+      <a href="/construction">Contattaci</a>
+  </div>
+  <div class="thirdRow">
+      <a href="/construction">Impostazioni sui cookie</a><br>
+      <a href="/construction">Informativa su privacy e cookie</a>
+  </div>
+  </footer>
