--- a/src/app/account/thankyou/thankyou.component.html
+++ b/src/app/account/thankyou/thankyou.component.html
@@ -1,28 +1,32 @@
-<div id="logo" class="m-4">
-    <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
-</div>
-<hr>
-<div class="container mt-5">
-    <div id="thankyou" class="text-center">
-        <h3>Ti confermiamo che il tuo ordine<br>è stato completato.</h3>
-        <h3>Grazie per aver scelto LabAir!</h3>
-            <p>
-                Riceverai un'email di conferma<br>per l'evasione del tuo ordine.
-            </p>
-            <span>back to <a routerLink="/">Home</a></span>
+<div id="page-container">
+    <div id="content-wrap">
+        <div id="logo" class="m-4">
+            <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
+        </div>
+        <hr>
+        <div class="container mt-5">
+            <div id="thankyouBox" class="text-center">
+                <h3>Ti confermiamo che il tuo ordine<br>è stato completato.</h3>
+                <h3>Grazie per aver scelto LabAir!</h3>
+                <p>
+                    Riceverai un'email di conferma<br>per l'evasione del tuo ordine.
+                </p>
+                <span>back to <a routerLink="/">Home</a></span>
+            </div>
+        </div>
     </div>
+    <footer id="miniFooter" class="d-flex justify-content-between px-5">
+        <div class="firstRow">
+            <a href="/construction">Condizioni d'uso</a><br>
+            <a href="/construction">Condizioni di vendita</a>
+        </div>
+        <div class="secondRow">
+            <a href="/construction">Info Legali e Societarie</a><br>
+            <a href="/construction">Contattaci</a>
+        </div>
+        <div class="thirdRow">
+            <a href="/construction">Impostazioni sui cookie</a><br>
+            <a href="/construction">Informativa su privacy e cookie</a>
+        </div>
+    </footer>
 </div>
-<footer class="d-flex justify-content-between px-5 w-100">
-<div class="firstRow">
-    <a href="/construction">Condizioni d'uso</a><br>
-    <a href="/construction">Condizioni di vendita</a>
-</div>
-<div class="secondRow">
-    <a href="/construction">Info Legali e Societarie</a><br>
-    <a href="/construction">Contattaci</a>
-</div>
-<div class="thirdRow">
-    <a href="/construction">Impostazioni sui cookie</a><br>
-    <a href="/construction">Informativa su privacy e cookie</a>
-</div>
-</footer>
