--- a/src/app/account/default/default.component.html
+++ b/src/app/account/default/default.component.html
@@ -1,5 +1,5 @@
 <div class="headerAccount m-5 mb-0 d-flex justify-content-between">
-  <div class="logo">
+  <div id="logo">
     <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
   </div>
     <a href="#" class="mt-3 me-2" (click)="logout()">Esci</a>
