--- a/src/app/account/review-order/review-order.component.html
+++ b/src/app/account/review-order/review-order.component.html
@@ -1,5 +1,5 @@
 <div class="headerAccount m-5 mb-0 d-flex justify-content-between">
-  <div class="logo">
+  <div id="logo">
     <img src="./assets/images/logo.png" alt="Logo" routerLink="/home">
   </div>
     <a href="#" class="mt-3 me-2" (click)="logout()">Esci</a>
@@ -23,7 +23,7 @@
       <p>Metodo di pagamento: {{paymentData.paymentMethod === 'creditDebitCard'? 'Carta di credito o debito': (paymentData.paymentMethod === 'paypal'? 'PayPal' : 'Google Pay')}}<br>
       <span *ngIf="paymentData.paymentMethod === 'creditDebitCard'">Numero di carta: {{ maskedCreditCardNumber }}</span></p>
     </div>
-    <div class="order-details w-100 mx-3 pe-5">
+    <div class="order-details mx-3 pe-5">
       <h4 class="mb-4">Articoli nel Carrello</h4>
       <ul *ngFor="let item of cartItems">
         <li class="itemCart mb-3 d-flex justify-content-between">
@@ -34,13 +34,13 @@
     <hr>
     <div class="totalOrder text-end">
       <h4>Totale Ordine</h4>
-      <p>{{ total }} €</p>
+      <p>{{ total | currency: ' ' }}€</p>
     </div>
 
     </div>
     <button class="btn btn-dark mt-3 ms-3 mb-5" (click)="placeOrder()">Conferma ordine</button>
 </div>
-<footer class="d-flex justify-content-between px-5 w-100">
+<footer id="miniFooter" class="d-flex justify-content-between px-5">
   <div class="firstRow">
       <a href="/construction">Condizioni d'uso</a><br>
       <a href="/construction">Condizioni di vendita</a>
