--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,47 +1,47 @@
 <footer>
     <ul id="colonna1">
-        <li><h6><a href="#">GIFT CARD</a></h6></li>
-        <li><h6><a href="#">TROVA UN NEGOZIO</a></h6></li>
-        <li><h6><a href="#">LABAIR MAGAZINE</a></h6></li>
-        <li><h6><a href="#">DIVENTA MEMBRO</a></h6></li>
-        <li><h6><a href="#">CODICI PROMOZIONALI</a></h6></li>
-        <li><h6><a href="#">DICONO DI NOI</a></h6></li>
+        <li><h6><a routerLink="/construction">GIFT CARD</a></h6></li>
+        <li><h6><a routerLink="/construction">TROVA UN NEGOZIO</a></h6></li>
+        <li><h6><a routerLink="/construction">LABAIR MAGAZINE</a></h6></li>
+        <li><h6><a routerLink="/construction">DIVENTA MEMBRO</a></h6></li>
+        <li><h6><a routerLink="/construction">CODICI PROMOZIONALI</a></h6></li>
+        <li><h6><a routerLink="/construction">DICONO DI NOI</a></h6></li>
     </ul>
     <ul id="colonna2">
         <h6>ASSISTENZA</h6>
-        <li><a href="#">Hai bisogno di aiuto?</a></li>
-        <li><a href="#">Stato ordine</a></li>
-        <li><a href="#">Spedizione e consegna</a></li>
-        <li><a href="#">Resi</a></li>
-        <li><a href="#">Opzioni di pagamento</a></li>
-        <li><a href="#">Contattaci</a></li>
+        <li><a routerLink="/construction">Hai bisogno di aiuto?</a></li>
+        <li><a routerLink="/construction">Stato ordine</a></li>
+        <li><a routerLink="/construction">Spedizione e consegna</a></li>
+        <li><a routerLink="/construction">Resi</a></li>
+        <li><a routerLink="/construction">Opzioni di pagamento</a></li>
+        <li><a routerLink="/construction">Contattaci</a></li>
     </ul>
     <ul id="colonna3">
         <li>
             <h6>AZIENDA</h6>
         </li>
-        <li><a href="#">Informazioni su Nike</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Lavora con noi</a></li>
-        <li><a href="#">Investitori</a></li>
-        <li><a href="#">Sostenibilità</a></li>
-        <li><a href="#">Obiettivo</a></li>
+        <li><a routerLink="/construction">Informazioni su Nike</a></li>
+        <li><a routerLink="/construction">News</a></li>
+        <li><a routerLink="/construction">Lavora con noi</a></li>
+        <li><a routerLink="/construction">Investitori</a></li>
+        <li><a routerLink="/construction">Sostenibilità</a></li>
+        <li><a routerLink="/construction">Obiettivo</a></li>
     </ul>
     <ul id="colonna4">
-        <li><a href="#">a</a></li>
-        <li><a href="#">b</a></li>
-        <li><a href="#">c</a></li>
-        <li><a href="#">d</a></li>
-        <li><a href="#">e</a></li>
-        <li><a href="#">f</a></li>
+        <li><a routerLink="/construction">a</a></li>
+        <li><a routerLink="/construction">b</a></li>
+        <li><a routerLink="/construction">c</a></li>
+        <li><a routerLink="/construction">d</a></li>
+        <li><a routerLink="/construction">e</a></li>
+        <li><a routerLink="/construction">f</a></li>
     </ul>
     <ul id="colonna5">
-        <li><a href="#">Guide</a></li>
-        <li><a href="#">Condizioni d'uso</a></li>
-        <li><a href="#">Condizioni di vendita</a></li>
-        <li><a href="#">Info Legali e Societarie</a></li>
-        <li><a href="#">Informativa sulla privacy e sui cookie</a></li>
-        <li><a href="#">Impostazioni dei cookie</a></li>
+        <li><a routerLink="/construction">Guide</a></li>
+        <li><a routerLink="/construction">Condizioni d'uso</a></li>
+        <li><a routerLink="/construction">Condizioni di vendita</a></li>
+        <li><a routerLink="/construction">Info Legali e Societarie</a></li>
+        <li><a routerLink="/construction">Informativa sulla privacy e sui cookie</a></li>
+        <li><a routerLink="/construction">Impostazioni dei cookie</a></li>
     </ul>
 
 </footer>
