--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -150,7 +150,7 @@ padding: 20px 20px 10px 20px;
 
     .containerButtons {
         margin: 0 auto;
-        padding: 0;
+        padding: .5em 0;
         position: fixed;
         left: 0;
         bottom: 0;
