--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header-container">
+<header>
   <div class="microbanner microbanner-top">
     <p class="microbanner-text"><a [href]="microbannersLinks">{{currentText}}</a></p>
   </div>
